--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [
     { name = "eric wang", email = "ehjwang@gmail.com" }
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 dependencies = [
     "submitit>=1.5.2",
 ]
@@ -22,5 +22,14 @@ build-backend = "hatchling.build"
 dev = [
     "pytest>=8.3.5",
     "pdoc>=15.0.1",
+    "autoslurm",
 ]
 
+[tool.uv.sources]
+autoslurm = { workspace = true }
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+addopts = [
+    "--import-mode=importlib",
+]
