changed name to slurmomatic because autoslurm was taken

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "autoslurm"
+name = "slurmify"
 version = "0.1.0"
 description = "custom decorator to turn any function slurm-deployable. Can submit multiple jobs and multiple job_arrays"
 readme = "README.md"
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.scripts]
-autoslurm = "autoslurm:main"
+slurmify = "slurmify:main"
 
 [build-system]
 requires = ["hatchling"]
@@ -22,11 +22,11 @@ build-backend = "hatchling.build"
 dev = [
     "pytest>=8.3.5",
     "pdoc>=15.0.1",
-    "autoslurm",
+    "slurmify",
 ]
 
 [tool.uv.sources]
-autoslurm = { workspace = true }
+slurmify = { workspace = true }
 
 [tool.pytest.ini_options]
 pythonpath = "src"
