--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ authors = [
 ]
 requires-python = ">=3.10"
 dependencies = [
+    "numpy==1.26",
+    "scikit-learn==1.5.2",
+    "scikit-toggle",
+    "setuptools>=78.0.1",
     "submitit>=1.5.2",
 ]
 
@@ -29,3 +33,6 @@ pythonpath = "src"
 addopts = [
     "--import-mode=importlib",
 ]
+
+[tool.uv.sources]
+scikit-toggle = { path = "../scikit-toggle" }
