--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.10"
 dependencies = [
     "numpy==1.26",
+    "optuna>=4.2.1",
     "scikit-learn==1.5.2",
     "scikit-toggle",
     "setuptools>=78.0.1",
